@@ -123,10 +123,13 @@ namespace Mono.Addins.Gui
 			else
 				reps = service.Repositories.GetAvailableAddins (rep);
 			
-			foreach (AddinRepositoryEntry arep in reps) {
-				Addin sinfo = AddinManager.Registry.GetAddin (arep.Addin.Id);
+			foreach (AddinRepositoryEntry arep in reps)
+			{
 				if (!Services.InApplicationNamespace (service, arep.Addin.Id))
 					continue;
+				
+				// Find whatever version is installed
+				Addin sinfo = AddinManager.Registry.GetAddin (Addin.GetIdName (arep.Addin.Id));
 				
 				if (sinfo == null) {
 					if (showNotInstalled)
