@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <stetic-interface>
   <configuration>
-    <images-root-path>../</images-root-path>
+    <images-root-path>..</images-root-path>
     <target-gtk-version>2.8.3</target-gtk-version>
   </configuration>
   <widget class="Gtk.Dialog" id="Mono.Addins.Gui.ErrorDialog" design-size="632 155">
